// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MediaCard should render a custom cta element 1`] = `
<body>
  <div>
    <div
      class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-justify-xs-center MuiGrid-grid-xs-12 MuiGrid-grid-sm-6 MuiGrid-grid-md-6 MuiGrid-grid-lg-3"
    >
      <div
        class="MuiGrid-root sc-gsTCUz dQnJmO MuiGrid-item MuiGrid-grid-xs-11"
      >
        <img
          alt=""
          height="193"
          src="https://placekeanu.com/318/159/g"
          width="386"
        />
        <div
          class="sc-dlfnbm dVghKd"
        >
          <h5
            style="color: rgb(0, 239, 225);"
          >
            Canvas
          </h5>
          <p>
            this is information about gradleaders
          </p>
          <a
            href="https://google.com"
            title="Search Google"
          >
            Google
          </a>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`MediaCard should render a custom image element 1`] = `
<body>
  <div>
    <div
      class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-justify-xs-center MuiGrid-grid-xs-12 MuiGrid-grid-sm-6 MuiGrid-grid-md-6 MuiGrid-grid-lg-3"
    >
      <div
        class="MuiGrid-root sc-gsTCUz dQnJmO MuiGrid-item MuiGrid-grid-xs-11"
      >
        <img
          alt=""
          role="presentation"
          src="https://placekeanu.com/318/159/g"
        />
        <div
          class="sc-dlfnbm dVghKd"
        >
          <h5
            style="color: rgb(0, 239, 225);"
          >
            Canvas
          </h5>
          <p>
            this is information about gradleaders
          </p>
          <button
            class="sc-bdfBwQ jEFczo"
          >
            View Gradleaders
          </button>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`MediaCard should render children 1`] = `
<body>
  <div>
    <div
      class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-justify-xs-center MuiGrid-grid-xs-12 MuiGrid-grid-sm-6 MuiGrid-grid-md-6 MuiGrid-grid-lg-3"
    >
      <div
        class="MuiGrid-root sc-gsTCUz dQnJmO MuiGrid-item MuiGrid-grid-xs-11"
      >
        <img
          alt=""
          height="193"
          src="https://placekeanu.com/318/159/g"
          width="386"
        />
        <div
          class="sc-dlfnbm dVghKd"
        >
          <h5
            style="color: rgb(0, 239, 225);"
          >
            Canvas
          </h5>
          <p>
            this is information about gradleaders
          </p>
          <button
            class="sc-bdfBwQ jEFczo"
          >
            View Gradleaders
          </button>
        </div>
      </div>
    </div>
  </div>
</body>
`;
